--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,11 @@ dmypy.json
 .pyre/
 .pytype/
 cython_debug/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+.history/
+*.vsix
