--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,8 +3,12 @@ name: Lint
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - 'example/**'
   pull_request:
     branches: [main]
+    paths-ignore:
+      - 'example/**'
 
 jobs:
   lint:
