--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,8 +3,12 @@ name: Test
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - 'example/**'
   pull_request:
     branches: [main]
+    paths-ignore:
+      - 'example/**'
 
 jobs:
   test:
