--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,9 @@ repos:
     hooks:
       - id: ruff-check
         args: [ "--fix" ]
+        exclude: ^example/
       - id: ruff-format
+        exclude: ^example/
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
@@ -25,8 +27,10 @@ repos:
     rev: v2.4.1
     hooks:
     - id: codespell
+      exclude: ^example/
 
   - repo: https://github.com/crate-ci/typos
     rev: v1.34.0
     hooks:
       - id: typos
+        exclude: ^example/
